--- a/lang/dk.yml
+++ b/lang/dk.yml
@@ -47,8 +47,12 @@ dk:
     rd: '.'
     th: '.'
   LocalDateFormat:
-    Nice: 'j.m.Y g:ia'
-    Nice24: 'j.m.Y H:i'
-    Date: 'j.m.Y'
+    Nice: 'd-m-Y'
+    Long: 'j F Y'
+    Full: 'j M Y'
+  LocalDatetimeFormat:
+    Nice: 'd-m-Y g:ia'
+    Nice24: 'd-m-Y H:i'
+    Date: 'd-m-Y'
     Time: 'g:ia'
     Time24: 'H:i'
