--- a/lang/nl.yml
+++ b/lang/nl.yml
@@ -47,6 +47,10 @@ nl:
     rd: e
     th: e
   LocalDateFormat:
+    Nice: 'd-m-Y'
+    Long: 'j F Y'
+    Full: 'j M Y'
+  LocalDatetimeFormat:
     Nice: 'd-m-Y g:i'
     Nice24: 'd-m-Y H:i'
     Date: 'd-m-Y'
