ADD LocalTime class and support

--- a/lang/es.yml
+++ b/lang/es.yml
@@ -56,3 +56,7 @@ es:
     Date: 'd/m/Y'
     Time: 'g:ia'
     Time24: 'H:i'
+  LocalTimeFormat:
+    Nice: 'g:ia'
+    Nice24: 'H:i'
+    Short: 'g:ia'
