--- a/lang/sv.yml
+++ b/lang/sv.yml
@@ -56,3 +56,7 @@ sv:
     Date: 'Y-m-d'
     Time: 'g:ia'
     Time24: 'H:i'
+  LocalTimeFormat:
+    Nice: 'g:ia'
+    Nice24: 'H:i'
+    Short: 'g:ia'
