--- a/lang/da.yml
+++ b/lang/da.yml
@@ -56,3 +56,7 @@ da:
     Date: 'd-m-Y'
     Time: 'g:ia'
     Time24: 'H:i'
+  LocalTimeFormat:
+    Nice: 'g:ia'
+    Nice24: 'H:i'
+    Short: 'g:ia'
