--- a/lang/mi_NZ.yml
+++ b/lang/mi_NZ.yml
@@ -56,3 +56,7 @@ mi_NZ:
     Date: 'd/m/Y'
     Time: 'g:ia'
     Time24: 'H:i'
+  LocalTimeFormat:
+    Nice: 'g:ia'
+    Nice24: 'H:i'
+    Short: 'g:ia'
